# ics-gcal

./: .gitignore  Cargo.toml
migrations/: 20250108095614_add_calendar_table.sql
src/: main.rs
src/models/: calendar.rs
