[package]
name = "ics-gcal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = "1.0.217"
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["v4"] }
env_logger = "0.11.6"
